--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-webcam": "^7.1.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "@nextui-org/react": "^1.0.0-beta.12",
+    "@vercel/analytics": "^1.0.1",
+    "downloadjs": "^1.4.7",
+    "html2canvas": "^1.4.1",
+    "rc-slider": "^10.1.1",
+    "react-colorful": "^5.6.1"
   }
 }
